[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bonanza-labs"
version = "0.1.0"
description = "🧨 Bonanza Labs CLI — AI tools for builders"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{name = "Bonanza Labs", email = "passiveassets@proton.me"}]
keywords = ["ai", "video", "repo-health", "agent-wallet", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.28",
]

[project.scripts]
bonanza = "bonanza.cli:main"

[project.optional-dependencies]
video = ["edge-tts>=6.1"]
doctor = ["pyyaml>=6.0", "gitpython>=3.1"]
wallet = ["solana>=0.30", "web3>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]
